@@ -10,6 +10,12 @@ What's New in Python 3.4.0 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #16416: OS data are now always encoded/decoded to/from
+  UTF-8/surrogateescape, instead of the locale encoding (which may be ASCII if
+  no locale environment variable is set), to avoid inconsistencies with
+  os.fsencode() and os.fsdecode() functions which are already using
+  UTF-8/surrogateescape.
+
 - Issue #16453: Fix equality testing of dead weakref objects.
 
 - Issue #9535: Fix pending signals that have been received but not yet
